--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -12,6 +12,8 @@
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.2.0/css/all.css' integrity='sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ'
         crossorigin='anonymous'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <title>Find A Match</title>
     <style>
         .questions{
@@ -177,6 +179,46 @@
                 </p>
             </div>
         </footer>
+        <!-- Modal -->
+        <div class="modal fade" id="matchModal" tabindex="-1" role="dialog" aria-labelledby="matchModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="matchModalLabel">Your Match</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <h3 id="matchModalName"></h3>
+                        <img id="matchModalPhoto" style="width:100%;"></a>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="matchModalFail" tabindex="-1" role="dialog" aria-labelledby="matchModalFailLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="matchModalFailLabel">Your Match</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <h4 id="matchModalFailName">No Match, Please try again</h4>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
         <script type="text/javascript">
             $(".submit").on("click", function (event) {
                 event.preventDefault();
@@ -197,13 +239,13 @@
                         , $("#q10").val()
                     ]
                 };
-                console.log(newUser);
-                $.post('api/matches', newUser,
-                    function (data) {
+                $.post('api/matches', newUser, function (data) {
                         if (data) {
-                            alert("You have completed your Reservation, see ya soon TrashBag!")
+                            $("#matchModalName").text(data.name)
+                            $("#matchModalPhoto").attr("src", data.photo)
+                            $("#matchModal").modal('show');
                         } else {
-                            alert("You gone wait today")
+                            $("#matchModalFail").modal('hide');
                         }
                         $("#match-name").val("");
                         $("#match-photo-link").val("");
